--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "note-taker",
+  "name": "Main",
   "version": "1.0.0",
-  "description": "## Description",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {},
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gtscott90/note-taker.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gtscott90/note-taker/issues"
-  },
-  "homepage": "https://github.com/gtscott90/note-taker#readme"
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
